--- a/app_documento/config/locales/es.yml
+++ b/app_documento/config/locales/es.yml
@@ -96,7 +96,7 @@ es:
   errors: &errors
     format: ! '%{attribute} %{message}'
     messages:
-      accepted: debe ser aceptado
+      accepted: debe ser acep
       blank: no puede estar en blanco
       confirmation: no coincide con la confirmación
       empty: no puede estar vacío
