--- a/app_documento/config/locales/es.yml
+++ b/app_documento/config/locales/es.yml
@@ -2,6 +2,10 @@ es:
   devise:
     failure:
       bloqueado: "Tu cuenta está bloqueada."
+  successful:
+    messages:
+      created: "%{model} creado exitosamente."
+      updated: "%{model} actualizado exitosamente."
   date:
     abbr_day_names:
     - dom
